tests/paczka1/fuzzy1/41277746.err
Error in line 15: S939 S939 -1,3
Error in line 6: d1rczFhF6 A759 83,9
Error in line 20: QKmK A955 91,1
Error in line 28: d1rczFhF6 S939 289,6
Error in line 26: LsFOD1ajgzF A759 69,2
Error in line 31: LsFOD1ajgzF A955 1,2
Error in line 35: CzFjRy S939 31,2
Error in line 38: QKmK A759 20,76
Error in line 37: CzFjRy A349 80,0
